--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <body>
     <div class="portfolio">
       <div class="header-item">
-        <a href="./home.html"
+        <a href="./index.html"
           ><i id="icon-responsive" class="fa-solid fa-house"></i
         ></a>
 
